<resources>
    <string name="app_name">News</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="business">Business</string>
    <string name="sport">Sport</string>
    <string name="entertainment">Entertainment</string>
    <string name="topStory">Top Story</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_data_message">Ooops....check your internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_desc">TODO</string>
    <string name="news_headline">NEWS HEADLINE</string>
    <string name="news_source">NEWS SOURCE</string>
    <string name="published_date">PUBLISHED DATE</string>
    <string name="news_imageurl">news imageUrl</string>
    <string name="query">query</string>
    <string name="category_sport_business_etc">category:sport, business etc</string>
    <string name="top_headlines_or_everything">top-headlines or everything</string>
    <string name="search">Search</string>
    <string name="enter_your_search">Enter Your Search</string>
    <string name="search_menu">Search</string>
    <string name="no_search_data">Please enter a valid search</string>
    <string name="bookmarked_news">Bookmarked news</string>
</resources>