<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginStart="6dp"
    android:backgroundTint="@color/colorPrimaryDark"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/news_headline"/>

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/imageUrl"
            android:layout_height="150dp"
            android:layout_gravity="fill_vertical"
            android:contentDescription="@string/image_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="60"
                android:textColor="@android:color/white"
                android:text="@string/news_source"
                android:padding="4dp"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/publishedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="40"
                android:textColor="@android:color/white"
                android:padding="4dp"
                android:text="@string/published_date"
                android:textAlignment="textEnd" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>